antsurance/kit/examples/acme/model/main/default/objects/Acme_Policy__c/Acme_Policy__c.object-meta.xml
<CustomObject>
    <description>An invented customer's own policy object, for trying the adapter. It is not part of Antsurance.</description>
    <label>Acme Policy</label>
    <nameField>
        <displayFormat>POL-{00000}</displayFormat>
        <label>Policy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acme Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>