antsurance/kit/examples/acme/model/main/default/objects/Acme_Policy__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The broker that placed this policy.</description>
    <label>Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Acme Policies (Broker)</relationshipLabel>
    <relationshipName>Acme_Brokered_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>