antsurance/kit/examples/acme/model/main/default/objects/Acme_Policy__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account that holds this policy. A lookup, so a policy can be without one.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Acme Policies</relationshipLabel>
    <relationshipName>Acme_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>