antsurance/kit/examples/acme/model/main/default/objects/Acme_Policy__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>The customer's name as text, so a search finds the policy by it.</description>
    <label>Customer Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>