antsurance/kit/examples/acme/model/main/default/objects/Acme_Policy__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The last day of cover.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>