antsurance/kit/examples/acme/model/main/default/objects/Acme_Policy__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person to call about this policy.</description>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Acme Policies</relationshipLabel>
    <relationshipName>Acme_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>