antsurance/kit/examples/acme/model/main/default/objects/Acme_Policy__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>The sales region that wrote the policy. Required, and nothing in Antsurance has a field like it.</description>
    <label>Region</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>