antsurance/kit/examples/acme/model/main/default/objects/Acme_Policy__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The first day of cover.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>