antsurance/kit/examples/acme/model/main/default/objects/Acme_Policy__c/fields/Yearly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Premium__c</fullName>
    <description>What the policy costs for a year.</description>
    <label>Yearly Premium</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>